2002-02-20  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h (AstBlock): Add ABRUPT_TRY_FINALLY, to correctly emit
	synchronized blocks in try-finally.
	* src/bytecode.cpp (EmitSynchronizedStatement),
	(ProcessAbruptExit, EmitTryFinally): Correct synchronized
	statement to be safe with asynchronous exceptions, bug 2647.
	(EmitExpression, LoadVariable): Don't optimize away class literal
	or volatile variable qualifying a static reference, because of
	their potential side effects.
	* src/bytecode.h (class MethodStack): Improve, to work with
	synchronized statement fixes - patch 263.

2002-02-18  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h (NewTokenIndexArray): Remove dead code, which was
	responsible for bug 2652 before I reworked labeled statements.

2002-02-18  Eric Blake  <ebb9@email.byu.edu>

	* src/gencode.java: Add more optimizations, to reduce the size of
	the Unicode lookup table.
	* src/code.h:
	* src/code.cpp: Regenerate.

2002-02-12  Andrew M. Inggs  <aminggs@yahoo.co.uk>

	* doc/jikes.1: Updated description of @file option to match
	changes made on 2001-12-11.

2002-02-09  Eric Blake  <ebb9@email.byu.edu>

	* doc/jikes.1:
	* src/platform.cpp (U8S_help_header): Update copyright.

2002-02-09  Eric Blake  <ebb9@email.byu.edu>

	* configure.in: Bump version to 1.15b, to mark a stable CVS
	version for use with GNU Classpath.
	* configure:
	* src/config.h.in: Regenerate.

2002-02-09  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitStatement): Fix emission of dead code.

2002-02-08  Eric Blake  <ebb9@email.byu.edu>

	* src/platform.cpp:
	* src/platform.h (U8S_false, U8S_true): Added.
	* src/expr.cpp (CastValue): Simplified string conversion of
	boolean.
	(ProcessPLUS):
	* src/bytecode.cpp (LoadLiteral): Optimize loading -1L, 2L to 5L,
	-1.0f, -0.0f, 2.0f to 5.0f, -0.0, -1.0, 2.0 to 5.0.
	(EmitExpression): Fix bug with over-optimization of casts.
	(EmitBinaryExpression):
	* src/lookup.h: